# tournament-bracket-app

./: Cargo.toml  README.md
src/: main.rs
static/: styles.css
templates/: index.html
