[package]
name = "tourney_brackets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
handlebars = { version = "4.3.3", features = ["dir_source"] }
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
